--- a/movie/templates/index.html
+++ b/movie/templates/index.html
@@ -8,8 +8,8 @@
 
     <h4>Title : {{movie.title}}</h4>
     <p>English title : {{movie.title_en}}</p>
-    
-    <a href="{% url 'movies:detail' movie.id %}">Show more</a>
+
+    <a href="{% url 'movie:detail' movie.id %}">Show more</a>
     <hr>
 
   {% endfor %}
