Change: HTML structure

--- a/movie/templates/index.html
+++ b/movie/templates/index.html
@@ -1,17 +1,14 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
-  <h1>Index</h1>
-
+  <hr>
   {% for movie in movies %}
-
     <h4>Title : {{movie.title}}</h4>
     <p>English title : {{movie.title_en}}</p>
-
     <a href="{% url 'movie:detail' movie.id %}">Show more</a>
     <hr>
-
+  {%empty%}
+    <h4>NO COTENT</h4>
   {% endfor %}
-
+  <hr>
 {% endblock %}
