--- a/movie/templates/base.html
+++ b/movie/templates/base.html
@@ -1,38 +1,18 @@
 {% load bootstrap4 %}
 
 <!DOCTYPE html>
-
 <html lang="en">
-
-<head>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <title>Document</title>
-
-  {% bootstrap_css %}
-
-</head>
-
-<body>
-
-  <a href="{% url 'movie:index' %}">Home</a>
-
-  {% comment %}
-    <a href="{% url 'movie:create' %}">Write</a>
-  {% endcomment %}
-
-  <a href="{% url 'movie:create_modelform' %}">Write</a>
-
-  <div class="container">
-    {% block body %}
-    {% endblock %}
-  </div>
-
-  {% bootstrap_javascript jquery='full' %}
-
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    {% bootstrap_css %}
+  </head>
+  <body>
+    <a href="{% url 'movie:index' %}">Home</a>
+    <a href="{% url 'movie:create_modelform' %}">Write</a>
+    <div class="container">{% block body %} {% endblock %}</div>
+    {% bootstrap_javascript jquery='full' %}
+  </body>
 </html>
