--- a/movie/templates/detail.html
+++ b/movie/templates/detail.html
@@ -1,46 +1,33 @@
 {% extends 'base.html' %}
-
 {% load bootstrap4 %}
 
 {% block body %}
-
-  <h1>Detail</h1>
-
-  <p>Title : {{movie.title}}</p>
-  <p>English title : {{movie.title_en}}</p>
-  <p>Audience : {{movie.audience}}</p>
-  <p>Open date : {{movie.open_date|date:'Y-m-d'}}</p>
-  <p>Genre : {{movie.genre}}</p>
-  <p>Watch grade : {{movie.watch_grade}}</p>
-  <p>Score : {{movie.score}}</p>
-  <p>Poster url : {{movie.poster_url}}</p>
-  <p>Description : {{movie.description}}</p>
-
-  <a href="{% url 'movie:index' %}">Go back</a>
+  <h1>DETAIL</h1>
+  <hr>
+  <p>Title: {{movie.title}}</p>
+  <p>English title: {{movie.title_en}}</p>
+  <p>Audience: {{movie.audience}}</p>
+  <p>Open date: {{movie.open_date|date:'Y-m-d'}}</p>
+  <p>Genre: {{movie.genre}}</p>
+  <p>Watch grade: {{movie.watch_grade}}</p>
+  <p>Score: {{movie.score}}</p>
+  <p>Poster url</p>
+  <img src="{{movie.poster_url}}" alt="">
+  <p>Description: {{movie.description}}</p>
+  <hr>
   <a href="{% url 'movie:update_modelform' movie.id %}">Edit</a>
-
   <form action="{% url 'movie:delete' movie.id %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="Delete">
   </form>
-
-  {% comment %}
-    <a href="{% url 'movie:delete' movie.id %}">Delete</a>
-    <a href="{% url 'movie:update' movie.id %}">Edit</a>
-  {% endcomment %}
-
   <hr>
-
   <form action="{% url 'movie:comment_create' movie.id %}" method="POST">
     {% csrf_token %}
     {% bootstrap_form comment_form %}
     {% buttons submit='Submit' %}{% endbuttons %}
   </form>
-
   <hr>
-
   {% for comment in movie.comment_set.all %}
     <p>{{comment.comment}}</p>
   {% endfor %}
-
 {% endblock %}
