--- a/movie/templates/form.html
+++ b/movie/templates/form.html
@@ -1,19 +1,15 @@
 {% extends 'base.html' %}
-
 {% load bootstrap4 %}
 
 {% block body %}
-
   {% if request.resolver_match.url_name == 'create_modelform' %}
-    <h1>Create</h1>
+    <h1>CREATE</h1>
   {% else %}
-    <h1>Update</h1>
+    <h1>UPDATE</h1>
   {% endif %}
-
   <form action="" method="POST">
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons submit='Submit' %}{% endbuttons %}
   </form>
-
 {% endblock %}
